2010-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMessageChainsRule.cs: Change MaxChainLength from 5 to 4 
	and condition from >= to > (same effect) so the rule description
	(and documentation) makes more sense.

2010-03-24  Sebastien Pouliot  <sebastien@ximian.com>

	* CodeDuplicatedLocator.cs: Add [Conditional("DEBUG")] on 
	WriteToOutput. Fix typo IsExtractableToMethodBlock
	* InstructionMatcher.cs: Use rocks to cover all LDARG* and LDLOC*
	* Pattern.cs: Don't try to be too precise when checking compiler
	generated patterns since this only makes it difficult to support
	many compilers and adds false positives. New logic is more 
	permissive (IL wise), more (operand wise) and less (IL wise)
	precise and should cover more compilers while reducing false 
	positive (but it could fail to report some cases - which is less
	problematic than reporting false positive IMO)

2010-03-21  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongMethodsRule.cs: Add more types (from Workflow and 
	Silverlight) that use InitializeComponent to be ignored. Patch
	by Jeff Craig.

2010-01-24  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidSwitchStatementsRule.cs: Ignore all generated code since 
	their name will be compiler dependant. Fix unit test under Windows
	(well when compiled with CSC)

2009-07-07  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2009-02-23  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidSpeculativeGeneralityRule.cs: Fix a typo.  Thanks to Mat
	Steeples.

2008-12-22  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidSwitchStatementsRule.cs: Added the code for handling the
	table-driven switches.

2008-12-22  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidSwitchStatementsRule.cs: Fix some typos.  Thanks Sebastien !!

2008-12-22  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidSwitchStatementsRule.cs: New.  Rule for avoid the switch
	statments smell.